--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.3.5
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
